<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="address_caption">Address</string>
    <string name="alt_check">Alt</string>
    <string name="super_check">Super</string>
    <string name="server_found">Found VNC Server</string>
    <string name="server_removed">VNC Server disappeared</string>
    <string name="restartMDNS">Restart Server Discovery</string>
    <string name="scale_msg">Scale now</string>
    <string name="madeby">MultiVNC on Android is brought to you by Christian Beier (christianbeier.net).\n\nThe project home page is at https://github.com/bk138/multivnc\n\nIf you want to report a bug or request a feature, go to https://github.com/bk138/multivnc/issues\n\nThe change log can be fount at https://github.com/bk138/multivnc/blob/master/android/ChangeLog.md</string>
    <string name="colormode_caption">Color Mode</string>
    <string name="color_mode">Set Color Mode</string>
    <string name="connect_button">Connect</string>
    <string name="control_check">Ctrl</string>
    <string name="delete_connection">Delete</string>
    <string name="disconnect">Disconnect</string>
    <string name="toggle_framebuffer_update">Toggle View</string>
    <string name="toggle_mouse_buttons">Toggle Mouse Buttons</string>
    <string name="toggle_pointer_highlight">Toggle Pointer Highlighting</string>
    <string name="toggle_keyboard">Toggle Keyboard</string>

    <string name="export_settings">Export</string>
    <string name="export_settings_path">Export to file</string>
    <string name="database_error_open">Error opening database!</string>
    <string name="import_export_settings">Import/Export</string>
    <string name="import_settings">Import</string>
    <string name="import_settings_file_url">Import from file or URL</string>
    <string name="import_error_url">Improper URL given:</string>
    <string name="import_error_io">I/O error reading configuration</string>
    <string name="import_error_xml">XML or format error reading configuration</string>

    <string name="info">Connection Info</string>
    <string name="meta_key_title">Send Key Combo</string>
    <string name="nickname_caption">Bookmark</string>
    <string name="discovered_servers">Discovered Servers</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="savebookmark_button">Save Bookmark</string>
    <string name="bookmark_saved">Bookmark saved!</string>
    <string name="bookmark_invalid">This is not a valid bookmark anymore!</string>
    <string name="password_caption">Password</string>
    <string name="keep_password_button">Keep</string>
    <string name="port_caption">Port</string>
    <string name="repeater_caption">ID On Repeater</string>
    <string name="repeater_hint">Server ID when connecting to an UltraVNC-repeater</string>
    <string name="save_as_copy">Save as Copy</string>
    <string name="credentials_needed_title">Credentials Needed…</string>
    <!-- Send selected metakey -->
    <string name="send_button">Send</string>
    <string name="send_key_again">Send Key Combo Again</string>
    <string name="shift_check">Shift</string>
    <string name="shortcut_label">VNC Connection Shortcut</string>
    <string name="shortcut_no_entries">No bookmarks yet</string>
    <string name="special_keys">Key Combo</string>
    <string name="username_caption">Username</string>
    <string name="username_hint">For Windows/Mac authentication</string>
    <string name="editbookmark_title">Edit Bookmark</string>
    <string name="enterbookmarkname">Please enter a bookmark name…</string>
    <string name="bookmark_save_question">Do you want to bookmark this server?</string>
    <string name="bookmark_delete_question">Are you sure you want to delete this bookmark?</string>
    <string name="disconnect_question">Are you sure you want to disconnect?</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>

    <string name="utils_title_error">Error!</string>

    <string name="support_dialog_title">Please Support MultiVNC</string>
    <string name="support_dialog_text">If you like MultiVNC, why not consider supporting its development? For the time being, you can do so easily by rating the app or by donating. Thanks!</string>

    <string name="support_dialog_yes">Yes, good idea!</string>
    <string name="support_dialog_no">No, not now.</string>
    <string name="support_dialog_neveragain">Never ask again!</string>

    <string name="firstrun_help_dialog_title">Show Help?</string>
    <string name="firstrun_help_dialog_text">Seems it\'s the first time you use MultiVNC. Do you want to read the app manual? It\'s not very long yet informative...</string>

    <string name="pleaserate">If you like MultiVNC, why not show some love by clicking the heart?</string>
    <string name="changelog_dialog_title">What\'s new…</string>
    <string name="changelog_dialog_text">
<![CDATA[
        If you\'d like to know what\'s new, please visit the <a href="https://github.com/bk138/multivnc/blob/master/android/ChangeLog.md">online
        Change Log</a>.
    ]]>
</string>
    <string name="connected_to">Connected to %1$s</string>
    <string name="host_and">%1$s and </string>
    <string name="app_name">ExtD</string>
    <string name="searching">Searching...</string>
    <string name="no_networks">No networks found</string>
    <string name="new_connection">New Connection</string>
    <string name="serverListTitle">Available Computers</string>
    <string name="title_activity_canvas">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ip_label">Ip:</string>
    <string name="port_label">Port:</string>
    <string name="secret_label">Secret:</string>
    <string name="connection_error">Couldn\'t connect :(</string>
    <string name="connection_history_title">History</string>
    <string name="quick_connect_title">Quick connect</string>
    <string name="empty">Nothing\'s here :(</string>
    <string name="no_saved_connections">No saved connections.\nSwipe right to add one.</string>
    <string name="no_history_connections">No saved connections.\nSwipe left to add one.</string>

    <string name="delete_history_entry">delete</string>
    <string name="connect_history_entry">connect</string>
    <string name="generating_keys">Generating Keys</string>
    <string name="loading_history">Loading history...</string>
    <string name="key_gen_failure">Key generation failed</string>

    <!-- OpenKeychain not installed -->
    <string name="openkeychain_not_installed_title">OpenKeychain not installed</string>
    <string name="openkeychain_not_installed_message">OpenKeychain is required for Password Store to function, please install it from the stores below</string>
    <string name="openkeychain_not_installed_google_play">Google Play</string>
    <string name="play_deeplink_template">https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="openkeychain_not_installed_fdroid">F-Droid</string>
    <string name="fdroid_deeplink_template">https://f-droid.org/en/packages/%1$s/</string>
</resources>
